[ci skip] Analyse outlier in load IQR 2c8d04889cf09777b6530ca811863bde046b2435

--- a/_sources/content/notebooks/feature_engineering.ipynb
+++ b/_sources/content/notebooks/feature_engineering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "71ac5566",
+   "id": "359da422",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "46fb3605",
+   "id": "42ae3c20",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e77b16e9",
+   "id": "a2ca5f95",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "43b3b4f8",
+   "id": "0bf81f4e",
    "metadata": {},
    "source": [
     "## Time range\n",
@@ -91,7 +91,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6634ab39",
+   "id": "e0f778b4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "74239423",
+   "id": "89634d43",
    "metadata": {},
    "source": [
     "\n",
@@ -126,7 +126,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cc321c31",
+   "id": "9160bac4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cf5a3327",
+   "id": "6a898bdc",
    "metadata": {},
    "source": [
     "\n",
@@ -149,7 +149,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "21df2e0b",
+   "id": "b8ae8135",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +170,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12d954ff",
+   "id": "713f8353",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +191,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2660bc08",
+   "id": "811ff7fb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +201,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5dd6fc17",
+   "id": "2c31740e",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -213,7 +213,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b2d0f25b",
+   "id": "d7892c4d",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -225,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7c4d2484",
+   "id": "3d58c727",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b2057608",
+   "id": "21f42596",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -264,7 +264,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a8584e1f",
+   "id": "a4911dc3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,11 +284,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fc22a187",
+   "id": "7ab81169",
    "metadata": {
     "lines_to_next_cell": 0
    },
    "source": [
+    "\n",
     "## Electricity load data\n",
     "\n",
     "Finally we load the electricity load data. This data will both be used as a\n",
@@ -298,7 +299,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "41a81f36",
+   "id": "7e5f59a3",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -315,7 +316,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c2ee9cdc",
+   "id": "da36055f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -337,7 +338,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d8c87146",
+   "id": "30080418",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -364,7 +365,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fefb2b35",
+   "id": "6a8e8f87",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -374,7 +375,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d3c47b69",
+   "id": "47749ad6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -388,7 +389,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "006241f4",
+   "id": "01d12be1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -401,7 +402,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "890d0652",
+   "id": "d6f27dcb",
    "metadata": {},
    "source": [
     "\n",
@@ -414,7 +415,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "31779a8a",
+   "id": "bdd8ce54",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -424,30 +425,27 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0bfc15da",
+   "cell_type": "markdown",
+   "id": "f80e2710",
    "metadata": {
     "lines_to_next_cell": 2
    },
-   "outputs": [],
    "source": [
-    "# ## Lagged features\n",
-    "#\n",
-    "# We can now create some lagged features from the electricity load data. We\n",
     "\n",
-    "# We will create 3 hourly lagged features, 1 daily lagged feature, and 1 weekly\n",
-    "# lagged feature. We will also create a rolling median and inter-quartile\n",
-    "# feature over the last 24 hours and over the last 7 days."
+    "## Lagged features\n",
+    "\n",
+    "We can now create some lagged features from the electricity load data.\n",
+    "\n",
+    "We will create 3 hourly lagged features, 1 daily lagged feature, and 1 weekly\n",
+    "lagged feature. We will also create a rolling median and inter-quartile\n",
+    "feature over the last 24 hours and over the last 7 days."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9388028c",
-   "metadata": {
-    "lines_to_next_cell": 2
-   },
+   "id": "745c0e3d",
+   "metadata": {},
    "outputs": [],
    "source": [
     "def iqr(col, *, window_size: int):\n",
@@ -472,21 +470,13 @@
     "        iqr(pl.col(\"load_mw\"), window_size=24 * 7).alias(\"load_mw_iqr_7d\"),\n",
     "    ],\n",
     ")\n",
-    "time.join(electricity_lagged, on=\"time\", how=\"inner\")"
+    "electricity_lagged"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "fcac4b1a",
-   "metadata": {
-    "lines_to_next_cell": 0
-   },
-   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ff8556f4",
+   "id": "ef6807c4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -518,19 +508,20 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d45ec2ce",
+   "id": "9788db15",
    "metadata": {},
    "source": [
-    "## Investigating outliers in the lagged features"
+    "## Investigating outliers in the lagged features\n",
+    "\n",
+    "Let's use the `skrub.TableReport` tool to look at the plots of the marginal\n",
+    "distribution of the lagged features."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "610a0d7a",
-   "metadata": {
-    "lines_to_next_cell": 0
-   },
+   "id": "9b5496c6",
+   "metadata": {},
    "outputs": [],
    "source": [
     "from skrub import TableReport\n",
@@ -539,9 +530,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b5eb95d8",
+   "metadata": {},
+   "source": [
+    "\n",
+    "Let's extract the dates where the inter-quartile range of the load is\n",
+    "greater than 15,000 MW."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dbd9acdb",
+   "id": "376fa6d3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -551,28 +552,21 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "58a36c09",
+   "cell_type": "markdown",
+   "id": "e9ddcc8a",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "all_city_weather.filter(\n",
-    "        (pl.col(\"time\") > pl.datetime(2021, 12, 1, time_zone=\"UTC\"))\n",
-    "        & (pl.col(\"time\") < pl.datetime(2021, 12, 31, time_zone=\"UTC\"))\n",
-    ").skb.eval().plot.line(\n",
-    "    x=\"time:T\",\n",
-    "    y=\"temperature_2m_paris:Q\",\n",
-    ")"
+    "\n",
+    "We observe 3 date ranges with high inter-quartile range. Let's plot the\n",
+    "electricity load and the lagged features for the first data range along with\n",
+    "the weather data for Paris."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3c50f821",
-   "metadata": {
-    "lines_to_next_cell": 0
-   },
+   "id": "5b44f98e",
+   "metadata": {},
    "outputs": [],
    "source": [
     "altair.Chart(\n",
@@ -595,10 +589,50 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "77727031",
+   "id": "29c076b3",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "altair.Chart(\n",
+    "    all_city_weather.filter(\n",
+    "        (pl.col(\"time\") > pl.datetime(2021, 12, 1, time_zone=\"UTC\"))\n",
+    "        & (pl.col(\"time\") < pl.datetime(2021, 12, 31, time_zone=\"UTC\"))\n",
+    "    ).skb.eval()\n",
+    ").transform_fold(\n",
+    "    [\n",
+    "        f\"temperature_2m_{city_name}\" for city_name in city_names\n",
+    "    ],\n",
+    ").mark_line(\n",
+    "    tooltip=True\n",
+    ").encode(\n",
+    "    x=\"time:T\", y=\"value:Q\", color=\"key:N\"\n",
+    ").interactive()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "16cf37fc",
+   "metadata": {},
+   "source": [
+    "\n",
+    "Based on the plots above, we can see that the electricity load was high just\n",
+    "before the Christmas holidays due to low temperatures. Then the load suddenly\n",
+    "dropped because temperatures went higher right at the start of the\n",
+    "end-of-year holidays.\n",
+    "\n",
+    "So those outliers do not seem to be caused to a data quality issue but rather\n",
+    "due to a real change in the electricity load demand. We could conduct similar\n",
+    "analysis for the other date ranges with high inter-quartile range but we will\n",
+    "skip that for now.\n",
+    "\n",
+    "If we had observed significant data quality issues over extended periods of\n",
+    "time could have been addressed by removing the corresponding rows from the\n",
+    "dataset. However, this would make the lagged and windowing feature\n",
+    "engineering challenging to reimplement correctly. A better approach would be\n",
+    "to keep a contiguous dataset assign 0 weights to the affected rows when\n",
+    "fitting or evaluating the trained models via the use of the `sample_weight`\n",
+    "parameter."
+   ]
   }
  ],
  "metadata": {
