--- a/jupyterlite/files/notebooks/feature_engineering.ipynb
+++ b/jupyterlite/files/notebooks/feature_engineering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "3ec3e136",
+   "id": "758ed5e4",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "89b23971",
+   "id": "9f48091b",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11557fdf",
+   "id": "7aa48225",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5b152fe1",
+   "id": "22d0930c",
    "metadata": {},
    "source": [
     "## Time range\n",
@@ -91,7 +91,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fe79be4f",
+   "id": "d41970e6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1cb2edfa",
+   "id": "44c5185d",
    "metadata": {},
    "source": [
     "\n",
@@ -126,7 +126,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5825ffe7",
+   "id": "6ddcc599",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "26cdfe4a",
+   "id": "5346d4dd",
    "metadata": {},
    "source": [
     "\n",
@@ -149,7 +149,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "153ad14f",
+   "id": "44685d5c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +170,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "663b5e02",
+   "id": "9759e0da",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +191,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9094417e",
+   "id": "f3db4398",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +201,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fc5e8ad8",
+   "id": "d1fad1da",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -213,7 +213,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0ce91d06",
+   "id": "5f9ceed2",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -225,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0191b9e3",
+   "id": "3029d1e1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "53c351be",
+   "id": "d1821b93",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -264,7 +264,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4009a5e0",
+   "id": "78b0d27f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,11 +284,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "014a5991",
+   "id": "813f5a14",
    "metadata": {
     "lines_to_next_cell": 0
    },
    "source": [
+    "\n",
     "## Electricity load data\n",
     "\n",
     "Finally we load the electricity load data. This data will both be used as a\n",
@@ -298,7 +299,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "96e022e7",
+   "id": "3a830581",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -315,7 +316,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4d5c3c54",
+   "id": "55bd9af8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -337,7 +338,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d8587bbe",
+   "id": "b125e396",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -364,7 +365,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7878e8c5",
+   "id": "ad0906fe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -374,7 +375,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b0ef7bbf",
+   "id": "154163e2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -388,7 +389,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f76de94c",
+   "id": "69778543",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -401,7 +402,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "05803454",
+   "id": "e9a798fc",
    "metadata": {},
    "source": [
     "\n",
@@ -414,7 +415,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "491d0c9c",
+   "id": "b3474501",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -424,30 +425,27 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "07818687",
+   "cell_type": "markdown",
+   "id": "e9602210",
    "metadata": {
     "lines_to_next_cell": 2
    },
-   "outputs": [],
    "source": [
-    "# ## Lagged features\n",
-    "#\n",
-    "# We can now create some lagged features from the electricity load data. We\n",
     "\n",
-    "# We will create 3 hourly lagged features, 1 daily lagged feature, and 1 weekly\n",
-    "# lagged feature. We will also create a rolling median and inter-quartile\n",
-    "# feature over the last 24 hours and over the last 7 days."
+    "## Lagged features\n",
+    "\n",
+    "We can now create some lagged features from the electricity load data.\n",
+    "\n",
+    "We will create 3 hourly lagged features, 1 daily lagged feature, and 1 weekly\n",
+    "lagged feature. We will also create a rolling median and inter-quartile\n",
+    "feature over the last 24 hours and over the last 7 days."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17de63c7",
-   "metadata": {
-    "lines_to_next_cell": 2
-   },
+   "id": "204deb00",
+   "metadata": {},
    "outputs": [],
    "source": [
     "def iqr(col, *, window_size: int):\n",
@@ -472,21 +470,13 @@
     "        iqr(pl.col(\"load_mw\"), window_size=24 * 7).alias(\"load_mw_iqr_7d\"),\n",
     "    ],\n",
     ")\n",
-    "time.join(electricity_lagged, on=\"time\", how=\"inner\")"
+    "electricity_lagged"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a9ab4c7f",
-   "metadata": {
-    "lines_to_next_cell": 0
-   },
-   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2507262f",
+   "id": "daaa3330",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -518,19 +508,20 @@
   },
   {
    "cell_type": "markdown",
-   "id": "81ecc9a4",
+   "id": "8529de10",
    "metadata": {},
    "source": [
-    "## Investigating outliers in the lagged features"
+    "## Investigating outliers in the lagged features\n",
+    "\n",
+    "Let's use the `skrub.TableReport` tool to look at the plots of the marginal\n",
+    "distribution of the lagged features."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "91278a13",
-   "metadata": {
-    "lines_to_next_cell": 0
-   },
+   "id": "2b429ccf",
+   "metadata": {},
    "outputs": [],
    "source": [
     "from skrub import TableReport\n",
@@ -539,9 +530,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c5102e10",
+   "metadata": {},
+   "source": [
+    "\n",
+    "Let's extract the dates where the inter-quartile range of the load is\n",
+    "greater than 15,000 MW."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "91a5cda6",
+   "id": "fc0ce508",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -551,28 +552,21 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c61f94fb",
+   "cell_type": "markdown",
+   "id": "98bc4c11",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "all_city_weather.filter(\n",
-    "        (pl.col(\"time\") > pl.datetime(2021, 12, 1, time_zone=\"UTC\"))\n",
-    "        & (pl.col(\"time\") < pl.datetime(2021, 12, 31, time_zone=\"UTC\"))\n",
-    ").skb.eval().plot.line(\n",
-    "    x=\"time:T\",\n",
-    "    y=\"temperature_2m_paris:Q\",\n",
-    ")"
+    "\n",
+    "We observe 3 date ranges with high inter-quartile range. Let's plot the\n",
+    "electricity load and the lagged features for the first data range along with\n",
+    "the weather data for Paris."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c69568cc",
-   "metadata": {
-    "lines_to_next_cell": 0
-   },
+   "id": "2e0735f5",
+   "metadata": {},
    "outputs": [],
    "source": [
     "altair.Chart(\n",
@@ -595,10 +589,50 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "52e2df20",
+   "id": "62d6c10b",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "altair.Chart(\n",
+    "    all_city_weather.filter(\n",
+    "        (pl.col(\"time\") > pl.datetime(2021, 12, 1, time_zone=\"UTC\"))\n",
+    "        & (pl.col(\"time\") < pl.datetime(2021, 12, 31, time_zone=\"UTC\"))\n",
+    "    ).skb.eval()\n",
+    ").transform_fold(\n",
+    "    [\n",
+    "        f\"temperature_2m_{city_name}\" for city_name in city_names\n",
+    "    ],\n",
+    ").mark_line(\n",
+    "    tooltip=True\n",
+    ").encode(\n",
+    "    x=\"time:T\", y=\"value:Q\", color=\"key:N\"\n",
+    ").interactive()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "95ca1a3e",
+   "metadata": {},
+   "source": [
+    "\n",
+    "Based on the plots above, we can see that the electricity load was high just\n",
+    "before the Christmas holidays due to low temperatures. Then the load suddenly\n",
+    "dropped because temperatures went higher right at the start of the\n",
+    "end-of-year holidays.\n",
+    "\n",
+    "So those outliers do not seem to be caused to a data quality issue but rather\n",
+    "due to a real change in the electricity load demand. We could conduct similar\n",
+    "analysis for the other date ranges with high inter-quartile range but we will\n",
+    "skip that for now.\n",
+    "\n",
+    "If we had observed significant data quality issues over extended periods of\n",
+    "time could have been addressed by removing the corresponding rows from the\n",
+    "dataset. However, this would make the lagged and windowing feature\n",
+    "engineering challenging to reimplement correctly. A better approach would be\n",
+    "to keep a contiguous dataset assign 0 weights to the affected rows when\n",
+    "fitting or evaluating the trained models via the use of the `sample_weight`\n",
+    "parameter."
+   ]
   }
  ],
  "metadata": {
